--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "KanBan"
+  "defaultProject": "KanBan",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
