--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,7 @@
   },
   "defaultProject": "KanBan",
   "cli": {
-    "defaultCollection": "@ngrx/schematics"
+    "defaultCollection": "@ngrx/schematics",
+    "analytics": false
   }
 }
